updates to bring in line with changelog

--- a/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier.html
+++ b/app/views/layinghens/current/eligibility/aviary-pullets/multi-tier.html
@@ -82,7 +82,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The pullet housing must have a multi-tier system to enable the birds to transition between levels without flying or jumping more than 1m in height, horizontally or vertically.
+                    The building must have a multi-tier system so the pullets can move between levels without flying or jumping more than one metre in height, horizontally or vertically.
                 </p>
             </div>
 
