--- a/app/views/layinghens/current/eligibility/biosecurity/changing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/changing-area.html
@@ -20,11 +20,7 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The building must have a biosecurity changing area at each external pedestrian point.
-                    </p>
-
-                    <p class="govuk-hint">
-                        This must include:
+                        Each biosecurity changing area must include:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
@@ -90,7 +86,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The {{ poultryType }} housing must have an effective hygiene barrier.
+                    The building must have a biosecurity changing area at each external pedestrian point.
                 </p>
 
                 <p>
