--- a/app/views/layinghens/current/eligibility/biosecurity/elim-changing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/elim-changing-area.html
@@ -19,7 +19,7 @@
                 </p>
 
                 <p>
-                    This must include:
+                    Each biosecurity changing area must include:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
