--- a/app/views/layinghens/current/eligibility/building/lighting.html
+++ b/app/views/layinghens/current/eligibility/building/lighting.html
@@ -6,7 +6,7 @@
 {% endif %} 
 
 {% block pageTitle %}
-    Will the housing lighting system have these features?
+    Will the house lighting system have these features?
 {% endblock %} 
 
 {% block content %}
@@ -34,7 +34,7 @@
                     </li>
 
                     <li>
-                        full coverage of the entire floor-litter (scratch) area
+                        full coverage of the exposed floor-litter (scratch) area
                     </li>
 
                     {% if poultryType == 'pullet' %}
@@ -62,7 +62,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the housing lighting system have these features?',
+                            text: 'Will the house lighting system have these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
@@ -105,7 +105,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The housing lighting system must have these features to promote positive bird behaviour and reduce stress.
+                    When the project is complete, the house lighting system must have these features to promote positive bird behaviour and reduce stress.
                 </p>
             </div>
 
