--- a/app/views/layinghens/current/eligibility/building/pullet-requirements.html
+++ b/app/views/layinghens/current/eligibility/building/pullet-requirements.html
@@ -20,7 +20,7 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The pullet housing must have:
+                        When the project is complete, the building must have:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
