--- a/app/views/layinghens/current/eligibility/common/one-thousand-birds.html
+++ b/app/views/layinghens/current/eligibility/common/one-thousand-birds.html
@@ -42,7 +42,7 @@
                         }
                     },
                     hint: {
-                        text: 'You must have at least 1,000 ' + poultryDescriptor + ' on your farm in the last 6 months'
+                        text: 'You must have housed at least 1,000 ' + poultryDescriptor + ' on your farm in the last 6 months'
                     },
                     items: [
                         {
