--- a/app/views/layinghens/current/eligibility/funding/number-of-birds.html
+++ b/app/views/layinghens/current/eligibility/funding/number-of-birds.html
@@ -36,7 +36,7 @@
                     </p>
                 {% else %}
                     <p class="govuk-hint">
-                        The RPA want to fund a solar PV system with a power capacity that can support the building's high welfare features (lighting, ventilation system) for the amount of birds in the refurbished part of the building.
+                        The RPA want to fund a solar PV system with a power capacity that can support the building’s high welfare features (lighting, ventilation system) for the amount of birds in the refurbished part of the building.
                     </p>
 
                     <p class="govuk-hint">
