--- a/app/views/layinghens/current/eligibility/solar/solar-pv-system.html
+++ b/app/views/layinghens/current/eligibility/solar/solar-pv-system.html
@@ -15,7 +15,7 @@
                  {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        You have the option to buy and install a solar PV system with the grant. The solar PV panels must be installed on the roof of this building
+                        You have the option to buy and install a solar PV system with the grant. The solar PV panels must be installed on the roof of this building.
                     </p>
 
                     {{ govukWarningText ({
