--- a/app/views/layinghens/current/eligibility/veranda/specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/specification.html
@@ -104,7 +104,7 @@
                 </h2>
 
                 <p>
-                    The openings of the pop holes along the length of the hen house must add up to a total of 2 metres for every 1,000 hens in the building.
+                    The width of pop hole openings along the length of the hen house must add up to a total of 2 metres for every 1,000 hens in the building.
                 </p>
 
                 <p>
