--- a/app/views/layinghens/user-testing/likert-scale.html
+++ b/app/views/layinghens/user-testing/likert-scale.html
@@ -227,6 +227,12 @@
                     </a>
                 </li>
 
+                <li>
+                    <a href="/layinghens/current/details/reference-number">
+                        Final page
+                    </a>
+                </li>
+
             </ul>
             
         </div>
