--- a/app/views/layinghens/current/eligibility/funding/cost.html
+++ b/app/views/layinghens/current/eligibility/funding/cost.html
@@ -11,7 +11,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    What is the total estimated cost of {{ projectDescriptor }} the building?
+    What is the total estimated cost of {{ projectDescriptor }} this building?
 {% endblock %}
 
 {% set shouldEliminate = false %}
@@ -44,13 +44,13 @@
             {% endset %}
             
                 <h1 class="govuk-heading-l">
-                    What is the estimated cost of {{ projectDescriptor }} the building?
+                    What is the estimated cost of {{ projectDescriptor }} this building?
                 </h1>
 
                 <p class="govuk-hint">
-                    You can apply for a grant of up to 40% of the estimated building project costs.
+                    You can apply for a grant of up to 40% of the estimated costs of {{ projectDescriptor }} this building.
                     {% if data['solar-pv-system'] == 'Yes' %}
-                        Do not include the solar PV system costs in the estimated building project costs.
+                        Do not include the solar PV system costs.
                     {% endif %}
                 </p>
 
