--- a/app/views/layinghens/current/eligibility/funding/elim-cost.html
+++ b/app/views/layinghens/current/eligibility/funding/elim-cost.html
@@ -38,31 +38,31 @@
                 <h1 class="govuk-heading-l">The minimum grant you can apply for is £15,000 (40% of £37,500)</h1>
 
                 <p>
-                    You can apply for grant funding for multiple building projects. You must submit an application for each building project.
+                    You can apply for grant funding for multiple buildings. You must submit an application for each building.
                 </p>
 
                 <p>
-                    If the total grant funding for your combined building projects is more than £15,000 (40% of £37,500), you may still be eligible to apply for grant funding.
+                    If the total grant funding for your combined buildings is more than £15,000 (40% of £37,500), you may still be eligible to apply for grant funding.
                 </p>
 
                 {% if data['solar-pv-system'] == 'Yes' %}
 
                     {{ govukInsetText ({
-                        text: 'You cannot apply for funding for a solar PV system if you have not requested the minimum funding amount for individual building project costs.'
+                        text: 'You cannot apply for funding for a solar PV system if you have not requested the minimum grant funding amount for a building.'
                     }) }}
 
                 {% endif %}
 
                 <p>
-                    If you are applying for grant funding for a single building project, you can
+                    If you are applying for grant funding for a single building, you can
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
-                        See other grants you may be eligible for.
+                        see other grants you may be eligible for.
                     </a>
                 </p>
 
                 <p>
                     <a href="potential-funding">
-                        I am applying for multiple building projects.
+                        I am applying for multiple buildings
                     </a>
                 </p>
 
