--- a/app/views/layinghens/current/eligibility/ventilation/specifications.html
+++ b/app/views/layinghens/current/eligibility/ventilation/specifications.html
@@ -30,7 +30,7 @@
 
                     <ul class="govuk-list govuk-list--bullet govuk-hint">
                         <li>
-                            an air speed of 1 metre per second over birds
+                            an air speed of one metre per second over birds
                         </li>
                         <li>
                             a maximum ventilation rate of {{ minRate }}m<sup>3</sup> per hour per 1,000 birds
