--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,11 +31,19 @@
   </thead>
   <tbody class="govuk-table__body">
 
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="adding-value-2024" class="govuk-lik govuk-link--no-visited-state">Adding value grant (2024)</a>
+        </td>
+
+      <td class="govuk-table__cell">Checker (R1, last updated on 19 March 2024)</td>
+
+    </tr>
+
      <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="layinghens" class="govuk-lik govuk-link--no-visited-state">Laying hens grant</a>
         </td>
 
-      <td class="govuk-table__cell">Checker (R1, last updated on 12 March 2024)</td>
+      <td class="govuk-table__cell">Checker (R3, last updated on 14 March 2024)</td>
 
     </tr>
 
