--- a/app/views/adding-value-2024/current/scoring/customers.html
+++ b/app/views/adding-value-2024/current/scoring/customers.html
@@ -4,6 +4,8 @@
     Who will your new customers be after the project?
 {% endblock %}
 
+
+
 {% block content %}
 
 <div class="govuk-grid-row">
@@ -18,7 +20,7 @@
                         For example, you will now sell directly to retailers
                     </p>
 
-                    <p class="govuk-hint">
+                    <p class="govuk-hint app-hint">
                         Select all that apply
                     </p>
 
