business details change

--- a/app/views/layinghens/current/details/applying.html
+++ b/app/views/layinghens/current/details/applying.html
@@ -15,7 +15,7 @@
             {{ govukRadios ({
                 idPrefix: 'applying',
                 name: 'applying',
-                classes: 'govuk-radios--inline',
+                classes: 'govuk-radios',
                 fieldset: {
                     legend: {
                         text: 'Who is applying for this grant?',
