--- a/app/views/layinghens/current/details/business-details.html
+++ b/app/views/layinghens/current/details/business-details.html
@@ -61,7 +61,7 @@
                 value: data['turnover'] if data['turnover'] else '',
                 type: 'number',
                 label: {
-                    text: 'Business turnover (£)'
+                    text: 'Annual Business turnover (£)'
                 },
                 prefix: {
                     text: '£'
