--- a/app/views/layinghens/current/details/check-details.html
+++ b/app/views/layinghens/current/details/check-details.html
@@ -90,6 +90,7 @@
 
           </dd>
         </div>
+
         <div class="govuk-summary-list__row">
 
           <dt class="govuk-summary-list__key">
@@ -103,6 +104,21 @@
 
           </dd>
         </div>
+
+        <div class="govuk-summary-list__row">
+
+          <dt class="govuk-summary-list__key">
+            County parish holding (CPH) number
+
+          </dt>
+          <dd class="govuk-summary-list__value">
+          {{ data['cph'] }}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+
+          </dd>
+        </div>
+
       </dl>
 
 
@@ -115,7 +131,7 @@
               <tr class="govuk-table__row">
                   <div class="govuk-summary-list__row--no-border">
                       <dt class="govuk-summary-list__key">
-                          <p class="govuk-heading-m"><strong>Agent's details</strong></p>
+                          <p class="govuk-heading-m"><strong>Agent details</strong></p>
                       </dt>
                       <dd class="govuk-summary-list__actions">
                           <a class="govuk-link govuk-body" href="agent-details">
@@ -195,7 +211,7 @@
         <tr class="govuk-table__row">
             <div class="govuk-summary-list__row--no-border">
                 <dt class="govuk-summary-list__key">
-                    <p class="govuk-heading-m"><strong>Applicant's details</strong></p>
+                    <p class="govuk-heading-m"><strong>Applicant details</strong></p>
                 </dt>
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link govuk-body" href="applicant-details">
