--- a/app/views/layinghens/current/details/agent-details.html
+++ b/app/views/layinghens/current/details/agent-details.html
@@ -22,7 +22,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <form class="form" id="mainForm" action="check-details" method="post">
-        <h1 class="govuk-heading-l"> Agent's details</h1>
+        <h1 class="govuk-heading-l"> Agent details</h1>
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Name</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="agent-firstname">
@@ -50,7 +50,7 @@
           <label class="govuk-label" for="agent-email">
               Email address
               <div id="event-name-hint" class="govuk-hint">
-                  We’ll only use this to send you confirmation
+                  We will only use this to send you confirmation
               </div>
           </label>
           <input class="govuk-input  govuk-!-width-two-thirds" id="agent-email" name="agent-email" type="agent-email" spellcheck="false" aria-describedby="agent-email-hint" autocomplete="agent-email" value="{{ data['agent-email'] }}">
@@ -58,22 +58,12 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="agent-landline">
-              Mobile number
+              Telephone number
           </label>
           <div id="landline-name-hint" class="govuk-hint">
               We will only use this to contact you about your application
           </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="agent-landline" name="agent-landline" type="agent-landline" spellcheck="false" aria-describedby="agent-landline-hint" autocomplete="agent-landline" value="{{ data['agent-landline'] }}">
-        </div>
-
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="agent-mobile">
-              Landline number
-          </label>
-          <div id="landline-name-hint" class="govuk-hint">
-              We will only use this to contact you about your application
-          </div>
-          <input class="govuk-input  govuk-!-width-two-thirds" id="agent-mobile" name="agent-mobile" type="agent-mobile" spellcheck="false" aria-describedby="agent-mobile-hint" autocomplete="agent-mobile" value="{{ data['agent-mobile'] }}">
         </div>
 
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-3">Business address</h2>
@@ -100,7 +90,7 @@
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="agent-county">
-                County
+                County (optional)
             </label>
             <input class="govuk-input govuk-!-width-one-half" id="agent-county" name="agent-county" type="agent-county" spellcheck="false" aria-describedby="agent-county-hint" autocomplete="agent-county" value="{{ data['agent-county'] }}">
         </div>
