--- a/app/views/layinghens/current/details/applicant-details.html
+++ b/app/views/layinghens/current/details/applicant-details.html
@@ -46,7 +46,7 @@
               <div id="event-name-hint" class="govuk-hint">
               {% if data['applicant'] === "Agent" %} We’ll only use this to send them confirmation
                          {% else %}
-                         We’ll only use this to send you confirmation
+                         We will only use this to send you a confirmation
                          {% endif %}
               </div>
 
@@ -56,7 +56,7 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-landline">
-              Mobile number
+              Telephone number
           </label>
           <div id="mobile-name-hint" class="govuk-hint">
             {% if data['applicant'] === "Agent" %} We will only use this to contact them about their application
@@ -65,19 +65,6 @@
                        {% endif %}
             </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-landline" name="farmer-landline" type="farmer-landline" spellcheck="false" aria-describedby="farmer-landline-hint" autocomplete="farmer-landline" value="{{ data['farmer-landline'] }}">
-        </div>
-
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="farmer-mobile">
-              Landline number
-          </label>
-          <div id="landline-name-hint" class="govuk-hint">
-            {% if data['applicant'] === "Agent" %} We will only use this to contact them about their application
-                       {% else %}
-                       We will only use this to contact you about your application
-                       {% endif %}
-          </div>
-          <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-mobile" name="farmer-mobile" type="farmer-mobile" spellcheck="false" aria-describedby="farmer-mobile-hint" autocomplete="farmer-mobile" value="{{ data['farmer-mobile'] }}">
         </div>
 
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-3">Business address</h2>
@@ -97,14 +84,14 @@
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="farmer-town">
-                Town (optional)
+                Town
             </label>
             <input class="govuk-input govuk-!-width-one-half" id="farmer-town" name="farmer-town" type="farmer-town" spellcheck="false" aria-describedby="farmer-town-hint" autocomplete="farmer-town" value="{{ data['farmer-town'] }}">
         </div>
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="farmer-county">
-                County
+                County (optional)
             </label>
             <input class="govuk-input govuk-!-width-one-half" id="farmer-county" name="farmer-county" type="farmer-county" spellcheck="false" aria-describedby="farmer-county-hint" autocomplete="farmer-county" value="{{ data['farmer-county'] }}">
         </div>
