--- a/app/views/layinghens/current/details/consent.html
+++ b/app/views/layinghens/current/details/consent.html
@@ -26,9 +26,9 @@
       <fieldset class="govuk-fieldset" aria-describedby="consent-to-terms-hint">
         <h1 class="govuk-heading-l">Confirm and send</h1>
         <p>I confirm that, to the best of my knowledge, the details I have provided are correct.</p>
-        <p>I understand the project’s eligibility and estimated grant amount is based on the answers I provided.</p>
-        <p>I am aware that the information I submit will be checked by the RPA.</p>
-        <p>I am happy to be contacted by DEFRA and RPA (or a third-party on their behalf) about registering my interest to apply for grant funding for a veranda project.</p>
+        <p>I understand the score was based on the answers I provided.</p>
+        <p>I am aware the information I submit will be checked.</p>
+        <p>I am happy to be contacted by Defra and RPA (or a third-party on their behalf) about my application.</p>
 
         {% if data['waitlist-enabled'] == 'true' and data['project-type'] == 'veranda' %}
           {{ govukInsetText ({
@@ -39,22 +39,17 @@
 
         <h3 class="govuk-heading-s">Improving our schemes</h3>
 
-        <p class="govuk-body govuk-!-margin-bottom-2">So that we can continue to improve our services and schemes, we may wish to contact you in the future.
-        Please confirm if you are happy for us, or a third-party working for us, to contact you.</p>
+        <p class="govuk-body govuk-!-margin-bottom-2">As we develop new services we get feedback from farmers and agents. </p>
+        <p> You may be contacted by us or a third party that we work with. </p>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="confirm" name="confirmation" type="checkbox" value="{{ data['confirmation'] }}">
             <label class="govuk-label govuk-checkboxes__label" for="confirm">
-            (Optional) I confirm.
+            (Optional) I consent to being contacted by Defra or a third party about service improvements
             </label>
           </div>
       </fieldset>
     </div>
-    
-    {{ govukWarningText ({
-      text: 'You can only submit your details once',
-      iconFallbackText: 'Warning'
-    }) }}
-
+  
     <form class="form" action="reference-number" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
         Confirm and send
