--- a/app/views/layinghens/current/details/business-details.html
+++ b/app/views/layinghens/current/details/business-details.html
@@ -86,6 +86,9 @@
                 name: 'cph',
                 classes: 'govuk-input--width-20',
                 value: data['cph'] if data['cph'] else '',
+                hint: {
+                    text: 'For example, 12/345/6789'
+                },
                 label: {
                     text: 'County parish holding (CPH) number'
                 }
