details section changes

--- a/app/views/layinghens/current/details/check-answers.html
+++ b/app/views/layinghens/current/details/check-answers.html
@@ -124,7 +124,7 @@
 
       {# include agent details only if applicant is Agent  #}
 
-      {% if (data['applying'] == "agent") %}
+      {% if (data['applying'] == "Agent") %}
 
       <table class="govuk-table">
           <thead class="govuk-table__head">
@@ -142,15 +142,6 @@
               </tr>
               <hr>
           </thead>
-
-
-
-
-
-
-
-
-
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
