--- a/app/views/layinghens/current/details/consent.html
+++ b/app/views/layinghens/current/details/consent.html
@@ -50,7 +50,7 @@
       </fieldset>
     </div>
   
-    <form class="form" action="reference-number" method="post">
+    <form class="form" action="confirmation" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
         Confirm and send
       </button>
