--- a/app/views/layinghens/user-testing/likert-scale.html
+++ b/app/views/layinghens/user-testing/likert-scale.html
@@ -228,8 +228,20 @@
                 </li>
 
                 <li>
-                    <a href="/layinghens/current/details/reference-number">
-                        Final page
+                    <a href="/layinghens/current/details/confirmation?project-type=refurb&waitlist-enabled=false">
+                        Final page (comprehensive) 
+                    </a>
+                </li>
+
+                <li>
+                    <a href="/layinghens/current/details/confirmation?project-type=veranda&waitlist-enabled=false">
+                        Final page (veranda) 
+                    </a>
+                </li>
+
+                <li>
+                    <a href="/layinghens/current/details/confirmation?project-type=veranda&waitlist-enabled=true">
+                        Final page (veranda waitlist) 
                     </a>
                 </li>
 
